[package]
name = "kv-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.23.0", features = ["full"]}
axum = "0.6.1"
serde = {version = "1.0.151", features = ["derive"]}
evmap = "10.0.2"
env_logger = "0.10.0"
dotenv = "0.15.0"
envy = "0.4.2"
log = "0.4.17"
parking_lot = "0.12.1"
anyhow = "1.0.68"
serde_json = "1.0.91"

kv-store-lib = { version = "0.1.0", path = "./kv-store-lib"}

[workspace]
members = [
  "kv-store-lib"
]
