[package]
name = "kv-store-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
evmap = "10.0.2"
log = "0.4.17"
parking_lot = "0.12.1"
priority-queue = "1.3.0"
serde = {version = "1.0.151", features = ["derive"]}
serde_json = "1.0.91"
tokio = {version = "1.23.0", features = ["full"]}


[dev-dependencies]
tokio-test = "0.4.2"
